--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -1,5 +1,5 @@
 %ic {
-	font-family: "icons";
+	font-family: "icon";
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -14,3 +14,31 @@
 		display: block;
 	}
 }
+
+._icon-share:before {
+	content: "\e908";
+ }
+ ._icon-right-arrow:before {
+	content: "\e906";
+ }
+ ._icon-search:before {
+	content: "\e900";
+ }
+ ._icon-map:before {
+	content: "\e901";
+ }
+ ._icon-cart:before {
+	content: "\e902";
+ }
+ ._icon-like:before {
+	content: "\e903";
+ }
+ ._icon-arrow:before {
+	content: "\e904";
+ }
+ ._icon-phone:before {
+	content: "\e905";
+ }
+ ._icon-send:before {
+	content: "\e907";
+ }
