--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,53 +2,449 @@
 
 //====================================================================================================
 
-//Burger
-/*
-.icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
+
+.header {
+     position: absolute;
+     width: 100%;
+	  top:0;
+	  left:0;
+
+	// .header__wrapper
+
+	&__wrapper {
+		position: fixed;
+		width: 100%;
+		top: 0;
+		left: 0;
+		z-index: 50;
+	}
+
+	// .header__container
+
+	&__container {
+	}
+
+	// .header__body
+
+	&__body {
+		display: flex;
+		align-items: center;
+		padding: 5px 0;
+		min-height: 125px;
 		position: relative;
-		width: rem(30);
-		height: rem(18);
-		cursor: pointer;
+		@media (max-width:$tablet){
+			 min-height: 80px; 
+		}
+		@media (max-width:$mobile){
+			min-height: 50px; 
+	  }
+	}
+
+	// .header__main
+
+	&__main {
+		display: flex;
+		align-items: center;
+		flex: 0 0 calc(494/1210 * 100%);
+		@media (max-width:$tablet){
+			flex: 1 1 auto;
+		}
+	}
+
+	// .header__logo
+
+	&__logo {
+		color: $mainColor;
+		font-weight: 700;
+		font-size:24px;
+		position: relative;
 		z-index: 5;
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 0.3s ease 0s;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: rem(2);
-			background-color: #000;
+
+	}
+
+	// .header__menu
+
+	&__menu {
+	
+	}
+
+	// .header__search
+
+	&__search {
+		@include adaptiveValue ("padding-right", 32, 15);
+		@media (min-width:$tablet) {
+			  flex: 1 1 auto;
 		}
-		&::before {
-			top: 0;
+	}
+
+	// .header__actions
+
+	&__actions {
+	}
+}
+.menu {
+	flex: 0 1 420px;
+	// .menu__body
+
+	&__body {
+		@media (max-width:$mobile){
+			 position: fixed;
+			 width: 100%;
+			 height: 100%;
+			 overflow: auto;
+			 top:0;
+			 left:-100%;
+			 background-color: rgb(195, 184, 184); 
+			 transition: left 0.3s ease 0s ;
+			 padding:  70px 15px 30px 15px;
+			 &::before{
+				 content: "";
+				 position: fixed;
+				 width: 100%;
+				 height: 50px;
+				 top:0;
+				 left: 0;
+				 transition: left 0.3s ease 0s;
+				 background-color: #fcf8f3;
+			    z-index: 2;
+				}
+
+
 		}
-		&::after {
-			bottom: 0;
+		&._active {
+			left: 0;
+			
+
 		}
-		span {
-			top: calc(50% - rem(1));
+	}
+
+	// .menu__list
+
+	&__list {
+		@media (min-width:$mobile) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-evenly;
+			
 		}
-		.menu-open & {
-			span {
-				width: 0;
+	}
+
+	// .menu__item
+
+	&__item {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		margin: 0px 3px;
+		padding: 5px 0;
+		position: relative;
+		@media (any-hover:hover){
+			&:hover{
+				.menu__sub-list{
+					transform: translate(0px, 0px);
+					opacity: 1;
+					pointer-events: auto;
+					visibility: visible;
+				}
+				.menu__arrow{
+					transform: rotate(-180deg);
+				}
+				.menu__arrow,
+				.menu__link {
+					color: $orangeColor;
+				}
 			}
-			&::before,
-			&::after {
+		}
+	}
+
+	// .menu__link
+
+	&__link {
+		font-weight: 500;
+		color: inherit;
+		transition: color 0.3s ease 0s;
+		@media (max-width:$mobile){
+			  font-size: 25px;
+			  font-weight: 600;
+		}
+	}
+
+	// .menu__arrow
+
+	&__arrow {
+		margin:  0px 0px 0px 8px;
+		transition:  all 0.3s ease 0s;
+		
+		@media (max-width:$mobile){
+			&._spoller-active{
+          transform: rotate(-180deg);
+			} 
+		}
+	
+	}
+
+	// .menu__sub-list
+
+	&__sub-list {
+     position: relative;
+	  background-color: $orangeColor;
+	  padding: 15px;
+	  flex: 1 1 100%;
+	  @media (min-width:$mobile) {
+		  opacity: 0;
+		  transition: all 0.3s ease 0s;
+		  transform: translate(0px, 10px);
+		  visibility: hidden;
+		  min-width: 200px;
+		  left: 0;
+		  pointer-events: none;
+		  position: absolute;
+		  top: 100%;
+		  z-index: 5;
+	  }
+		@media (max-width:$mobile){
+			  margin: 10px -15px 0px -15px;
+		}
+	}
+
+	// .menu__sub-item
+
+	&__sub-item {
+		&:not(:last-child){
+			margin: 0px 0px 5px 0px;
+			@media (max-width:$mobile){
+				margin: 0px 0px 10px 0px;
+				  
 			}
-			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
+		}
+	}
+
+	// .menu__sub-link
+
+	&__sub-link {
+		color: white;
+		line-height: 120%
+	}
+}
+
+
+
+
+
+
+
+
+
+.search {
+
+	// .search__form
+
+	&__form {
+		max-width: 473px;
+		&._active{
+			.search-form__item{
+				opacity: 1;
+				top: 100%;
+				visibility: visible;
+
 			}
-			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
+			.search-form__icon {
+				color: $orangeColor;
 			}
 		}
 	}
 }
-*/
+.search-form {
+
+	// .search-form__icon
+
+	&__icon {
+	position: relative;
+	z-index: 5;
+	font-size: 22px;
+	color: #262f56;
+	@media(min-width: $tablet){
+		display: none;
+	}
+	}
+
+	// .search-form__item
+
+	&__item {
+		background-color: 	white;
+		display: flex;
+		align-items: center;
+		@media (max-width:$tablet){
+			 box-shadow: 0 0 5px rgba(212, 209, 205, 0.3);
+			 position: absolute;
+			 width: 100%;
+			 left: 0; 
+			 top: -100%;
+			 z-index: 5;
+			 opacity: 0;
+			 visibility: hidden;
+			 transition: all 0.3s ease 0s;
+		}
+	}
+
+	// .search-form__btn
+
+	&__btn {
+		flex: 0 0 45px;
+		height: 45px;
+		font-size: 15px;
+		color: grey;
+	}
+}
+.input {
+	outline: none;
+   border: none;  
+	font-size: 14px;
+	color: $darkGreyColor;
+	padding:0px 20px 0px 0px;
+	width: 100%;
+}
+.actions-header {
+position: relative;
+z-index: 5;
+
+display: grid;
+grid-template-columns: auto;
+grid-auto-flow: column;
+align-items: center;
+@include adaptiveValue("gap", 22, 10);
+	// .actions-header__item
+
+	&__item {
+
+		// .actions-header__item_like
+
+		&_like {
+			color: #262f56;
+			font-size: 24px;
+			transition: color 0.3s ease 0s;
+			@media (any-hover:hover){
+				&:hover{
+					color: $orangeColor;
+				}
+				  
+			}
+		}
+	}
+}
+.cart-header {
+
+	// .cart-header__icon
+
+	&__icon {
+		color: #262f56;
+			font-size: 24px;
+			transition: color 0.3s ease 0s;
+			@media (any-hover:hover){
+				&:hover{
+					color: $orangeColor;
+				}
+				  
+			}
+			span {
+				position: absolute;
+				width: 20px;
+				height: 20px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				top: -10px;
+				right: -10px;
+				border-radius:50%;
+				background-color: $orangeColor;
+				color: white;
+				font-size: 12px;
+			}
+	}
+
+	// .cart-header__body
+
+	&__body {
+	}
+
+	// .cart-header__list
+
+	&__list {
+	}
+}
+.cart-list {
+}
+
+.icon-menu {
+	
+		display: none;
+		@media (max-width: $mobile) {
+			display: block;
+			margin-left: 40px;
+			position: relative;
+		   flex:0 0 30px;
+			width: rem(30);
+			height: rem(18);
+			cursor: pointer;
+			z-index: 5;
+			span,
+			&::before,
+			&::after {
+				content: "";
+				transition: all 0.3s ease 0s;
+				right: 0;
+				position: absolute;
+				width: 100%;
+				height: rem(2);
+				background-color: #000;
+			}
+			&::before {
+				top: 0;
+			}
+			&::after {
+				bottom: 0;
+			}
+			span {
+				top: calc(50% - rem(1));
+			}
+			.menu-open & {
+				span {
+					width: 0;
+				}
+				&::before,
+				&::after {
+				}
+				&::before {
+					top: calc(50% - rem(1));
+					transform: rotate(-45deg);
+				}
+				&::after {
+					bottom: calc(50% - rem(1));
+					transform: rotate(45deg);
+				}
+			}
+		}
+	}
+	
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//Burger
+
