--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,31 +7,36 @@
 //&display=swap - добавить при подключении через плагин
 
 // Подключить если есть локальные файлы шрифтов
-//@import "fonts/fonts";
+@import "fonts/fonts";
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
-//@import "fonts/icons";
+@import "fonts/icons";
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // Настройки шаблона ============================================================================================================================================================================================================================================================================================================================================================================================
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
+$fontFamily: "Gilroy";
+$fontSize: rem(16 ); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
+$mainColor: #3A3A3A; // Цвет шрифта по умолчанию
+$orangeColor: #E89F71;
+$orangeColor2: #eed7c9;
+$greyColor:#898989;
+$darkGreyColor: #616161;
+
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
 // Минимальная ширина страницы
 $minWidth: 320;
 // Ширина полотна (макета)
-$maxWidth: 1920;
+$maxWidth: 1440;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1210;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
@@ -59,10 +64,12 @@ $responsiveType: 1;
 // Стили тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 
 body {
+	background-color: $orangeColor2;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
 		touch-action: none;
+
 	}
 	// Сайт загружен
 	.loaded & {
